syntax = "proto3";
package tendermint.rpc.grpc;
option  go_package = "github.com/tendermint/tendermint/rpc/grpc;coregrpc";

import "tendermint/abci/types.proto";
import "tendermint/types/types.proto";
import "tendermint/p2p/types.proto";
import "tendermint/crypto/keys.proto";
import "tendermint/types/validator.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

//----------------------------------------
// Request types

message RequestPing {}

message RequestBroadcastTx {
  bytes tx = 1;
}

message BlockByHashRequest {
  bytes hash  = 1;
  bool  prove = 2;
}

message BlockByHeightRequest {
  int64 height = 1;
  bool  prove  = 2;
}

message BlockMetaByHashRequest {
  bytes hash = 1;
}

message BlockMetaByHeightRequest {
  int64 height = 1;
}

message CommitRequest {
  int64 height = 1;
}

message ValidatorSetRequest {
  int64 height = 1;
}

message SubscribeNewHeightsRequest {}

message StatusRequest {}

//----------------------------------------
// Response types

message ResponsePing {}

message ResponseBroadcastTx {
  tendermint.abci.ResponseCheckTx   check_tx   = 1;
  tendermint.abci.ResponseDeliverTx deliver_tx = 2;
}

message StreamedBlockByHashResponse {
  tendermint.types.Part         block_part    = 1;
  tendermint.types.Commit       commit        = 2;
  tendermint.types.ValidatorSet validator_set = 3;
  tendermint.types.BlockMeta    block_meta    = 4;
  bool                          is_last       = 5;
}

message StreamedBlockByHeightResponse {
  tendermint.types.Part block_part = 1;
  // Commit is only set in the first part, and
  // it stays nil in the remaining ones.
  tendermint.types.Commit commit = 2;
  // ValidatorSet is only set in the first part, and
  // it stays nil in the remaining ones.
  tendermint.types.ValidatorSet validator_set = 3;
  // BlockMeta is only set in the first part, and
  // it stays nil in the remaining ones.
  tendermint.types.BlockMeta block_meta = 4;
  bool                       is_last    = 5;
}

message BlockMetaByHashResponse {
  tendermint.types.BlockMeta block_meta = 1;
}

message BlockMetaByHeightResponse {
  tendermint.types.BlockMeta block_meta = 1;
}

message CommitResponse {
  tendermint.types.Commit commit = 1;
}

message ValidatorSetResponse {
  tendermint.types.ValidatorSet validator_set = 1;
}

message NewHeightEvent {
  int64 height = 1;
  bytes hash   = 2;
}

message StatusResponse {
  tendermint.p2p.DefaultNodeInfo node_info      = 1;
  SyncInfo                       sync_info      = 2;
  ValidatorInfo                  validator_info = 3;
}

message SyncInfo {
  bytes                     latest_block_hash   = 1;
  bytes                     latest_app_hash     = 2;
  int64                     latest_block_height = 3;
  google.protobuf.Timestamp latest_block_time   = 4
      [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  bytes                     earliest_block_hash   = 5;
  bytes                     earliest_app_hash     = 6;
  int64                     earliest_block_height = 7;
  google.protobuf.Timestamp earliest_block_time   = 8
      [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  bool catching_up = 9;
}

message ValidatorInfo {
  bytes                       address      = 1;
  tendermint.crypto.PublicKey pub_key      = 2;
  int64                       voting_power = 3;
}

//----------------------------------------
// Service Definition

service BroadcastAPI {
  rpc Ping(RequestPing) returns (ResponsePing);
  rpc BroadcastTx(RequestBroadcastTx) returns (ResponseBroadcastTx);
}

service BlockAPI {
  rpc BlockByHash(BlockByHashRequest) returns (stream StreamedBlockByHashResponse);
  rpc BlockMetaByHash(BlockMetaByHashRequest) returns (BlockMetaByHashResponse);
  rpc BlockByHeight(BlockByHeightRequest) returns (stream StreamedBlockByHeightResponse);
  rpc BlockMetaByHeight(BlockMetaByHeightRequest) returns (BlockMetaByHeightResponse);
  rpc Commit(CommitRequest) returns (CommitResponse);
  rpc ValidatorSet(ValidatorSetRequest) returns (ValidatorSetResponse);
  rpc SubscribeNewHeights(SubscribeNewHeightsRequest) returns (stream NewHeightEvent);
  rpc Status(StatusRequest) returns (StatusResponse);
}
